--- a/app/globals.css
+++ b/app/globals.css
@@ -30,4 +30,11 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  .tab-button{
+    @apply px-4 py-2 bg-gray-800 text-white text-lg rounded hover:bg-gray-900 transition-all ease-in-out duration-100;
+  }
+}
+.footer {
+  margin-top: auto;
 }
