--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
   }
 
   .tab-button{
-    @apply px-4 py-2 bg-gray-800 text-white text-lg rounded hover:bg-gray-900 transition-all ease-in-out duration-100;
+    @apply px-4 py-2  text-white text-lg rounded hover:bg-gray-900 transition-all ease-in-out duration-100;
   }
 }
 .footer {
