--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  box-sizing: border-box;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,9 +33,13 @@ body {
   }
 
   .tab-button{
-    @apply px-4 py-2  text-white text-lg rounded hover:bg-gray-900 transition-all ease-in-out duration-100;
+    @apply px-4 py-2  text-white text-base font-light rounded hover:bg-indigo-950 transition-all ease-in-out duration-100;
   }
 }
 .footer {
   margin-top: auto;
+}
+
+.event-background{
+  background-image: url('/bg_grid.png');
 }
