--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,7 @@ body {
   }
 
   .tab-button{
-    @apply px-4 py-2  text-white text-base font-light rounded hover:bg-indigo-950 transition-all ease-in-out duration-100;
+    @apply px-4 py-2  text-white text-sm md:text-base font-light rounded hover:bg-indigo-950 transition-all ease-in-out duration-100;
   }
 }
 .footer {
