--- a/app/globals.css
+++ b/app/globals.css
@@ -44,3 +44,38 @@ body {
 .event-background{
   background-image: url('/bg_grid.png');
 }
+.paragraph{
+
+  display: flex;
+
+  font-size: 60px;
+
+  line-height: 1;
+
+  padding: 40px;
+
+  max-width: 1280px;
+
+  color: white;
+
+  flex-wrap: wrap;
+
+  .word{
+
+    position: relative;
+
+    margin-right: 12px;
+
+    margin-top: 12px;
+
+    .shadow{
+
+      position: absolute;
+
+      opacity: 20%;
+
+    }
+
+  } 
+
+}
