feat : animations added and home page updated

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,3 +79,17 @@ body {
   visibility: hidden;
   transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
 }
+.animate-counter {
+  animation: none;
+}
+
+/* @keyframes countUp {
+  from {
+      opacity: 0;
+      transform: translateY(20px);
+  }
+  to {
+      opacity: 1;
+      transform: translateY(0);
+  }
+} */
